--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-changed": "^0.4.1",
     "gulp-filesize": "0.0.6",
     "gulp-iconfont": "^3.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^0.6.2",
     "gulp-notify": "^1.4.2",
     "gulp-rename": "^1.2.0",
@@ -36,11 +37,18 @@
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-swig": "^0.7.4",
+    "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.0",
     "lodash": "^2.4.1",
     "merge-stream": "^0.1.7",
     "pretty-hrtime": "~0.2.1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
+    "reactify": "^1.1.1",
     "require-dir": "^0.1.0",
+    "uglify": "^0.1.5",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "~0.1.1",
     "watchify": "^2.2.1"
   },
