--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "postinstall": "gulp build"
   },
   "browserify": {
-    "transform": [
-    ]
+    "transform": []
   },
   "dependencies": {
     "browser-sync": "~2.4.0",
@@ -52,7 +51,13 @@
     "watchify": "^2.2.1"
   },
   "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-plugin-rewire": "^0.1.22",
+    "babelify": "^6.3.0",
     "gulp-watch": "^4.1.1",
+    "karma": "^0.13.11",
+    "karma-browserify": "^4.4.0",
+    "karma-mocha": "^0.2.0",
     "rewireify": "^0.2.4"
   }
 }
