--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "karma": "^0.13.11",
     "karma-browserify": "^4.4.0",
     "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18",
     "rewireify": "^0.2.4"
   }
 }
