--- a/package.json
+++ b/package.json
@@ -54,10 +54,19 @@
     "babel-core": "^5.8.25",
     "babel-plugin-rewire": "^0.1.22",
     "babelify": "^6.3.0",
+    "chai": "^3.3.0",
+    "es5-shim": "^4.1.14",
+    "es6-shim": "^0.28.1",
     "gulp-watch": "^4.1.1",
     "karma": "^0.13.11",
     "karma-browserify": "^4.4.0",
+    "karma-es6-shim": "^0.1.3",
     "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-shim": "^1.1.1",
+    "mocha": "^2.3.3",
+    "phantomjs": "^1.9.18",
+    "react-addons-test-utils": "^0.14.0",
     "rewireify": "^0.2.4"
   }
 }
